unpackaged/main/default/objects/GT_Sponsorship__c/GT_Sponsorship__c.object-meta.xml
<CustomObject>
    <description>This will be the Sponsorship object for all accounts in Generic Template</description>
    <label>Sponsorship</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Sponsorship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsorships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>