unpackaged/main/default/objects/GT_Sponsorship__c/fields/Agency_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact_Email__c</fullName>
    <description>Email Address of Agency Contact</description>
    <label>Agency Contact Email</label>
    <type>Email</type>
</CustomField>