unpackaged/main/default/objects/GT_Sponsorship__c/fields/AM_Email__c.field-meta.xml
<CustomField>
    <fullName>AM_Email__c</fullName>
    <description>Account Manager Email</description>
    <label>GES AM Email</label>
    <type>Email</type>
</CustomField>