unpackaged/main/default/objects/GT_Sponsorship__c/fields/Congress_Lead__c.field-meta.xml
<CustomField>
    <fullName>Congress_Lead__c</fullName>
    <label>Congress Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Congress Lead 1</fullName>
            </value>
            <value>
                <fullName>Congress Lead 2</fullName>
            </value>
            <value>
                <fullName>Congress Lead 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>