unpackaged/main/default/objects/GT_Sponsorship__c/fields/Event_Manager_Email_Auto__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Email_Auto__c</fullName>
    <formula>IF((TEXT(Event_Manager__c) == &quot;Shawn McDonald&quot;),&quot;Shawn.McDonald@sigsauer.com&quot;, 
IF((TEXT(Event_Manager__c) == &quot;Aisling Meehan&quot;),&quot;Aisling.Meehan@sigsauer.com&quot;, 
IF((TEXT(Event_Manager__c) == &quot;Caitlin Ferdyn&quot;),&quot;Caitlin.Ferdyn@sigsauer.com&quot;, 
IF((TEXT(Event_Manager__c) == &quot;Nicole Brown&quot;),&quot;Nicole.Brown@sigsauer.com&quot;, 
IF((TEXT(Event_Manager__c) == &quot;Lisa Mahan&quot;),&quot;Lisa.Mahan@sigsauer.com&quot;, 
IF((TEXT(Event_Manager__c) == &quot;Michael Clearey&quot;),&quot;Michael.Cleary@sigsauer.com&quot;, 
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Manager Email</label>
    <type>Text</type>
</CustomField>