unpackaged/main/default/objects/GT_Sponsorship__c/fields/GES_Connect_Event__c.field-meta.xml
<CustomField>
    <fullName>GES_Connect_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up for GT_Event__c</description>
    <label>GES Connect Event</label>
    <referenceTo>GT_Event__c</referenceTo>
    <relationshipLabel>Sponsorships</relationshipLabel>
    <relationshipName>Sponsorships</relationshipName>
    <type>Lookup</type>
</CustomField>