unpackaged/main/default/objects/GT_Sponsorship__c/fields/GES_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Manager__c</fullName>
    <label>GES Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Al Grauzinis</fullName>
            </value>
            <value>
                <fullName>Andrew Vanhorn</fullName>
            </value>
            <value>
                <fullName>Carl Ahrens</fullName>
            </value>
            <value>
                <fullName>Courtney Rowe</fullName>
            </value>
            <value>
                <fullName>Camille Da silva</fullName>
                <label>Da silva, Camille</label>
            </value>
            <value>
                <fullName>Dave Botsford</fullName>
            </value>
            <value>
                <fullName>Donny Spray</fullName>
            </value>
            <value>
                <fullName>Duane Glossa</fullName>
            </value>
            <value>
                <fullName>Elizabeth Zajda</fullName>
            </value>
            <value>
                <fullName>Antonio Ferraro</fullName>
                <label>Ferraro, Antonio</label>
            </value>
            <value>
                <fullName>Frank Cacciato</fullName>
            </value>
            <value>
                <fullName>Greg Rawe</fullName>
            </value>
            <value>
                <fullName>James Haas</fullName>
            </value>
            <value>
                <fullName>Jim Angle</fullName>
            </value>
            <value>
                <fullName>Alexa Kelly</fullName>
                <label>Kelly, Alexa</label>
            </value>
            <value>
                <fullName>Heather Medus</fullName>
                <label>Medus, Heather</label>
            </value>
            <value>
                <fullName>Michael Samuel</fullName>
            </value>
            <value>
                <fullName>Mike Mulvey</fullName>
            </value>
            <value>
                <fullName>Sarah Montagne</fullName>
                <label>Montagne, Sarah</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Patty Welch</fullName>
            </value>
            <value>
                <fullName>Pesch, Patty</fullName>
            </value>
            <value>
                <fullName>Mike Porter</fullName>
                <label>Porter, Mike</label>
            </value>
            <value>
                <fullName>Sam Hornsby</fullName>
            </value>
            <value>
                <fullName>Tim Murphy</fullName>
            </value>
            <value>
                <fullName>Troy Devenberg</fullName>
            </value>
            <value>
                <fullName>Ana Wainman</fullName>
                <label>Wainman, Ana</label>
            </value>
            <value>
                <fullName>Nick Ward</fullName>
                <label>Ward, Nick</label>
            </value>
            <value>
                <fullName>Chris Wright</fullName>
                <label>Wright, Chris</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>