unpackaged/main/default/objects/GT_Sponsorship__c/fields/Project_Manager_Email_Auto__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Email_Auto__c</fullName>
    <formula>IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Katie Lillie&quot;),&quot;Katie.Lillie@crowncastle.com&quot;, 
IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Lisandra Fernandez&quot;),&quot;Lisandra.Fernandez@crowncastle.com&quot;, 
IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Kayleigh Fortuna&quot;),&quot;Kayleigh.Fortuna@crowncastle.com&quot;, 
IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Cassandra Zwick&quot;),&quot;Cassandra.Zwick@crowncastle.com&quot;, 
IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Stephanie Naida&quot;),&quot;Stephanie.Naida@crowncastle.com&quot;, 
IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Juanita Timney&quot;),&quot;Juanita.Timney@crowncastle.com&quot;,
IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Gina Carroll&quot;),&quot;Gina.Carroll@crowncastle.com&quot;,
IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Lisa Gebhart&quot;),&quot;Lisa.Gebhart@crowncastle.com&quot;,
IF((TEXT(Project_Manager_CrownCastle__c) == &quot;Oswin Chackochan&quot;),&quot;Oswin.Chackochan@crowncastle.com&quot;,&quot; &quot;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Project Manager Email</label>
    <type>Text</type>
</CustomField>