unpackaged/main/default/objects/GT_Sponsorship__c/fields/Reg_Attend_Cost_Estimated_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Reg_Attend_Cost_Estimated_CrownCastle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reg-Attend Cost Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>