unpackaged/main/default/objects/GT_Sponsorship__c/fields/Sponsorship_Cost_Actual_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Cost_Actual_CrownCastle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sponsorship Cost Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>