unpackaged/main/default/objects/GT_Sponsorship__c/fields/Sponsorship_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Notes__c</fullName>
    <label>Sponsorship Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>