unpackaged/main/default/objects/GT_Sponsorship__c/recordTypes/Sponsorship_CC.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_CC</fullName>
    <active>true</active>
    <description>Sponsorship for CC</description>
    <label>Sponsorship CC</label>
</RecordType>