unpackaged/main/default/objects/GT_Sponsorship__c/recordTypes/Sponsorship_GT.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_GT</fullName>
    <active>true</active>
    <description>Sponsorship fot GT</description>
    <label>Sponsorship GT</label>
</RecordType>