unpackaged/main/default/objects/GT_Sponsorship__c/recordTypes/Sponsorship_Merck.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_Merck</fullName>
    <active>true</active>
    <label>Sponsorship Merck</label>
</RecordType>