unpackaged/main/default/objects/GT_Sponsorship__c/recordTypes/Sponsorship_NNI.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_NNI</fullName>
    <active>true</active>
    <description>Sponsorship for NNI</description>
    <label>Sponsorship NNI</label>
</RecordType>