unpackaged/main/default/objects/GT_Sponsorship__c/recordTypes/Sponsorship_Pharma.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_Pharma</fullName>
    <active>true</active>
    <label>Sponsorship Pharma</label>
</RecordType>