unpackaged/main/default/objects/GT_Sponsorship__c/recordTypes/Sponsorship_Sig_Sauer.recordType-meta.xml
<RecordType>
    <fullName>Sponsorship_Sig_Sauer</fullName>
    <active>true</active>
    <label>Sponsorship Sig Sauer</label>
</RecordType>