unpackaged/main/default/objects/GT_Sponsorship__c/validationRules/Cancellation_Date_Field_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Date_Field_is_Required</fullName>
    <active>true</active>
    <description>Cancellation Date is required when Cancelled check box is checked.</description>
    <errorConditionFormula>AND(( Canceled__c ), 
ISBLANK( Cancellation_Date__c))</errorConditionFormula>
    <errorDisplayField>Cancellation_Date__c</errorDisplayField>
    <errorMessage>Please enter the Cancellation date.</errorMessage>
</ValidationRule>